v10.0.47 add padding-top to tab-dispatch to fix INCIDENT clipping

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -235,6 +235,7 @@
   }
 
   .tabs-spacer { height: 20px; }
+  #tab-dispatch { padding-top: 4px; }
   @media (max-width: 500px) { .tabs-spacer { height: 28px; } }
 
   .tab {
